<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageViewSound"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/imageViweSound"
            app:srcCompat="@drawable/admin"
            tools:ignore="ImageContrastCheck" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/imageViewLike"
            app:srcCompat="@drawable/unlike"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewWorld3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewWorld2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/imageViewLike"
            android:text="@string/textviewWorld3"
            android:textColor="#263238"
            android:textSize="27sp"
            />

        <TextView
            android:id="@+id/textViewWorld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/imageViewSound"
            android:text="@string/textviewWorld"
            android:textColor="#263238"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textViewWorld2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewWorld"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/imageViewSound"
            android:text="@string/textviewWorld2"
            android:textColor="#263238"
            android:textSize="27sp" />

</RelativeLayout>


</androidx.cardview.widget.CardView>

